# AAG

./: CMakeLists.txt  README.md
graphs/: build_dot.sh  hw2.dot  hw3.dot
src/: NKA2DKA.cpp  aag0.cpp  aag1.cpp  aag2.cpp  ka_transformations.cpp
